--- a/index.html
+++ b/index.html
@@ -331,10 +331,11 @@
       </div>
 
       <footer class="site-footer" role="contentinfo">
-        <div>© Copyright 2008 Wikipedia</div>
+        <div>© Copyright 2008 QUANSAH RICHARD ATO ET/ICT/24/0002</div>
       </footer>
 
     </div>
   </div>
 </body>
 </html>
+
