--- a/index.html
+++ b/index.html
@@ -331,11 +331,12 @@
       </div>
 
       <footer class="site-footer" role="contentinfo">
-        <div>© Copyright 2008 QUANSAH RICHARD ATO ET/ICT/24/0002</div>
+        <div>QUANSAH RICHARD ATO ET/ICT/24/0002</div>
       </footer>
 
     </div>
   </div>
 </body>
 </html>
+
 
